--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "main": "index.js",
   "dependencies": {
+    "busboy": "^1.4.0",
     "express": "^4.17.3",
     "firebase": "^9.6.7",
     "firebase-admin": "^9.8.0",
