finally got photo files uploaded to google storage

--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,12 @@
     },
     "database": {
       "port": 9000
+    },
+    "auth": {
+      "port": 9099
+    },
+    "storage": {
+      "port": 9199
     }
   }
 }
