--- a/functions/package.json
+++ b/functions/package.json
@@ -16,11 +16,18 @@
   "dependencies": {
     "busboy": "^1.4.0",
     "express": "^4.17.3",
+    "express-busboy": "^8.0.0",
+    "express-fileupload": "^1.3.1",
+    "express-multipart-file-parser": "^0.1.2",
     "firebase": "^9.6.7",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "multer": "^1.4.4",
+    "xhr2": "^0.2.1"
   },
   "devDependencies": {
+    "eslint": "^8.9.0",
+    "eslint-plugin-react": "^7.28.0",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
